--- a/.config/ignis/style.scss
+++ b/.config/ignis/style.scss
@@ -1,5 +1,19 @@
+$bg: #110F12;
+
 * {
     font-family: 'JetBrainsMono Nerd Font';
     font-size: large;
-    background-color: #110F12;
+    background-color: $bg;
+}
+
+.volume-slider {
+    min-width: 100px;
+    slider {
+        min-width: 20px;
+        min-height: 20px;
+    }
+}
+
+.workspace {
+    background-image: radial-gradient($bg, $bg);
 }
